Fix alignment of the top part

--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #1F2937;
+    padding-left: 80px;
+    padding-right: 80px;
 }
 
 .hero {
@@ -73,8 +75,9 @@ button {
 .hero .hero_img {
     color:white;
     background-color: grey;
+    justify-content: center;
+    flex: 1;
     text-align: center;
-    align-items: center;
 }
 
 .text_1 {
